--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "homepage": "https://github.com/axelarnetwork/axelar-cgp-solidity#readme",
   "dependencies": {
     "@axelar-network/axelar-cgp-solidity": "^4.5.0",
-    "@axelar-network/axelar-gmp-sdk-solidity": "^3.6.1"
+    "@axelar-network/axelar-gmp-sdk-solidity": "^3.6.1",
+    "@openzeppelin/contracts": "^4.9.2"
   },
   "devDependencies": {
     "@axelar-network/axelar-contract-deployments": "git://github.com/axelarnetwork/axelar-contract-deployments.git#74b942fdf10875a27b532d9bd6dfe2bd6db8a094",
